--- a/src/css/common.less
+++ b/src/css/common.less
@@ -13,13 +13,21 @@
   #app /deep/ .el-popover.el-popper {
     padding: 0 !important;
   }
+  body {
+    background: #f6f6f8;
+    box-sizing: border-box;
+  }
 // 主题颜色 绿色
-@main: "#61caa2";
+@main: #61caa2;
 // 红色
-@textColor:"#f8373a";
+@textColor:#f8373a;
 // 黑色
-@black:"#333333";
+@black:#333333;
 // 灰色666
-@grey:"#666666";
+@grey:#666666;
+// 白色
+@white:#fff;
+// 浅绿色
+@lightgreen: #e9f8f3;
 // 边框颜色
-@border:"1px solid";
+@border:1px solid;
